@@ -7,6 +7,10 @@ git-annex (5.20140607) UNRELEASED; urgency=medium
   * Windows: Fix opening webapp when repository is in a directory with
     spaces in the path.
   * Fix build with wai 0.3.0.
+  * Deal with FAT's low resolution timestamps, which in combination with
+    Linux's caching of higher res timestamps while a FAT is mounted, caused
+    direct mode repositories on FAT to seem to have modified files after
+    they were unmounted and remounted.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 09 Jun 2014 14:44:09 -0400
 
